--- a/.github/workflows/sdk_generation.yaml
+++ b/.github/workflows/sdk_generation.yaml
@@ -28,6 +28,7 @@ jobs:
         submodules: recursive
 
   generate:
+    needs: checkout-and-clone-submodules
     uses: speakeasy-api/sdk-generation-action/.github/workflows/workflow-executor.yaml@v15
     with:
       force: ${{ github.event.inputs.force }}
