--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@aurora-interactive/chatbot-api-sdk",
   "version": "3.1.1",
   "author": "Speakeasy",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Aurora-Interactive/chatbot-sdk-typescript.git"
+  },
   "type": "module",
   "main": "./esm/index.js",
   "exports": {
