--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -15,7 +15,7 @@ generation:
   auth:
     oAuth2ClientCredentialsEnabled: false
 typescript:
-  version: 3.1.2
+  version: 4.0.0-beta.1
   additionalDependencies:
     dependencies: {}
     devDependencies: {}
