--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aurora-interactive/chatbot-api-sdk",
-  "version": "3.1.2",
+  "version": "4.0.0-beta.1",
   "author": "Speakeasy",
   "repository": {
     "type": "git",
@@ -56,7 +56,6 @@
     "zod": ">= 3"
   },
   "devDependencies": {
-    "@types/jsonpath": "^0.2.4",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
     "eslint": "^8.57.0",
