--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -15,7 +15,7 @@ generation:
   auth:
     oAuth2ClientCredentialsEnabled: false
 typescript:
-  version: 4.0.0-beta.1
+  version: 4.0.0-rc.1
   additionalDependencies:
     dependencies: {}
     devDependencies: {}
@@ -37,7 +37,7 @@ typescript:
       shared: models/components
       webhooks: models/webhooks
   inputModelSuffix: input
-  maxMethodParams: 8
+  maxMethodParams: 6
   methodArguments: infer-optional-args
   moduleFormat: esm
   outputModelSuffix: output
