--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aurora-interactive/chatbot-api-sdk",
-  "version": "4.0.0-beta.1",
+  "version": "4.0.0-rc.1",
   "author": "Speakeasy",
   "repository": {
     "type": "git",
