--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -15,7 +15,7 @@ generation:
   auth:
     oAuth2ClientCredentialsEnabled: false
 typescript:
-  version: 4.0.0-rc.1
+  version: 4.0.0
   additionalDependencies:
     dependencies: {}
     devDependencies: {}
