--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aurora-interactive/chatbot-api-sdk",
-  "version": "7.3.1",
+  "version": "8.0.0",
   "author": "Speakeasy",
   "repository": {
     "type": "git",
@@ -56,6 +56,7 @@
     "zod": ">= 3"
   },
   "devDependencies": {
+    "@types/node": "^18.19.3",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
     "eslint": "^8.57.0",
