--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@aurora-interactive/chatbot-api-sdk",
-  "version": "9.1.0",
+  "version": "9.2.0",
   "author": "Speakeasy",
   "repository": {
-    "type": "git",
-    "url": "https://github.com/Aurora-Interactive/chatbot-sdk-typescript.git"
+    "url": "https://github.com/Aurora-Interactive/chatbot-sdk-typescript.git",
+    "type": "git"
   },
   "type": "module",
   "main": "./esm/index.js",
